.golden/-8863303109558677885/golden

INITIALPATH:7:11: error:
    • No instance for (Integral Float) arising from a use of ‘PyF.Internal.QQ.formatAnyIntegral’
    • In the first argument of ‘Data.Text.Internal.Builder.fromString’, namely ‘(((((PyF.Internal.QQ.formatAnyIntegral PyF.Formatters.Decimal) PyF.Formatters.Minus) Nothing) Nothing) number)’
      In the first argument of ‘PyF.magicFormat’, namely ‘(Data.Text.Internal.Builder.fromString (((((PyF.Internal.QQ.formatAnyIntegral PyF.Formatters.Decimal) PyF.Formatters.Minus) Nothing) Nothing) number))’
      In the expression: (PyF.magicFormat (Data.Text.Internal.Builder.fromString (((((PyF.Internal.QQ.formatAnyIntegral PyF.Formatters.Decimal) PyF.Formatters.Minus) Nothing) Nothing) number)))
  |
7 | main = [f|{number:d}|]
  |           ^^^^^^^^^^^^
